--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,18 @@ nav {
 }
 
 body {
-  background: #0d3f6a;
+  min-height: 100vh;
+  background: #373b44; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #373b44,
+    #18639d
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #373b44,
+    #18639d
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .card {
